--- a/sass/components/base/body.scss
+++ b/sass/components/base/body.scss
@@ -36,72 +36,74 @@
   color: #999;
 }
 
-@media (max-width: 770px) {
-  .section {
-    padding: 40px 0;
-  }
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 
-  .team__wrapper {
-    margin-top: 50px;
-    justify-content: center;
-  }
+a:hover {
+  text-decoration: none;
+  color: inherit;
+}
 
-  .team__item {
-    width: 100%;
-    max-width: 410px;
-    margin-bottom: 30px;
-  }
+ul,
+li {
+  list-style: none;
+  margin-bottom: 0px;
+}
 
-  .team__item:last-child {
-    margin-bottom: 0;
-  }
+@font-face {
+  font-family: "Montserrat";
+  src: url("fonts/Montserrat/Montserrat-Bold.ttf");
+  font-weight: bold;
+}
 
-  .wedo__img {
-    display: none;
-  }
+@font-face {
+  font-family: "Montserrat";
+  src: url("fonts/Montserrat/Montserrat-Regular.ttf");
+  font-weight: 400;
+}
 
-  .wedo__item {
-    width: 100%;
-  }
+@font-face {
+  font-family: "KaushanScript";
+  src: url("fonts/KaushanScript/KaushanScript-Regular.ttf");
+  font-weight: 400;
+}
 
-  .blog {
-    max-width: 380px;
-    margin: 0 auto;
-  }
+.scroll-disabled {
+  overflow: hidden;
 
-  .blog__item {
-    width: 100%;
-    margin-bottom: 30px;
-  }
-
-  .blog__item:last-child {
-    margin-bottom: 0;
+  .header__logo a {
+    color: #f38181;
   }
 }
 
-@media (max-width: 575px) {
-  .section__header {
-    margin-bottom: 50px;
-  }
+.container {
+  max-width: 1230px;
+}
 
-  .section__suptitle {
-    font-size: 20px;
-  }
+hr {
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin: 40px 0;
+  border: 0;
+  background-color: #e5e5e5;
+}
 
-  .section__title {
-    font-size: 24px;
-  }
+.separate {
+  width: 60px;
+  height: 3px;
 
-  .section__title:after {
-    margin: 20px auto;
+  &_white {
+    background-color: #ffffff;
   }
+  &_pink {
+    background-color: #f38181;
+  }
+}
 
-  .blogs__img {
-    width: 80px;
-    height: 50px;
-  }
-
-  .blogs__title {
-    font-size: 10px;
-  }
+body {
+  font-family: "Montserrat";
 }
