--- a/sass/components/sections/last-posts.scss
+++ b/sass/components/sections/last-posts.scss
@@ -1,86 +1,155 @@
-
 .blog {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  
-    &__item {
-      width: 31%;
-    }
-  
-    &__header {
-      position: relative;
-      margin-bottom: 14px;
-    }
-  
-    &__photo {
-      display: block;
-      max-width: 100%;
-      height: auto;
-    }
-  
-    &__date {
-      padding: 10px 20px;
-      background-color: #95e1d3;
-      font-style: italic;
-      font-size: 15px;
-      color: #fff;
-      font-weight: 300;
-      text-align: center;
-      position: absolute;
-      bottom: 10px;
-      left: -10px;
-      z-index: 1;
-    }
-  
-    &__date-day {
-      font-size: 30px;
-      line-height: 1;
-      font-weight: 700;
-      font-style: normal;
-    }
-  
-    &__content {
-      margin-bottom: 14px;
-    }
-  
-    &__title {
-      margin-bottom: 10px;
-      font-size: 14px;
-      color: #333;
-      text-transform: uppercase;
-    }
-  
-    &__title a {
-      color: inherit;
-      text-decoration: none;
-  
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  
-    &__text {
-      font-size: 15px;
-      color: #999;
-    }
-  
-    &__footer {
-      padding-top: 14px;
-      border-top: 1px solid #e5e5e5;
-      font-size: 15px;
-      font-weight: 300;
-      font-style: italic;
-      color: #999;
-    }
-  
-    &-stat__item {
-      display: inline-block;
-      vertical-align: top;
-      margin-right: 10px;
-  
-      i {
-        color: #95e1d3;
-      }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  &__item {
+    width: 31%;
+  }
+
+  &__header {
+    position: relative;
+    margin-bottom: 14px;
+  }
+
+  &__photo {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+
+  &__date {
+    padding: 10px 20px;
+    background-color: #95e1d3;
+    font-style: italic;
+    font-size: 15px;
+    color: #fff;
+    font-weight: 300;
+    text-align: center;
+    position: absolute;
+    bottom: 10px;
+    left: -10px;
+    z-index: 1;
+  }
+
+  &__date-day {
+    font-size: 30px;
+    line-height: 1;
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  &__content {
+    margin-bottom: 14px;
+  }
+
+  &__title {
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: #333;
+    text-transform: uppercase;
+  }
+
+  &__title a {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
     }
   }
+
+  &__text {
+    font-size: 15px;
+    color: #999;
+  }
+
+  &__footer {
+    padding-top: 14px;
+    border-top: 1px solid #e5e5e5;
+    font-size: 15px;
+    font-weight: 300;
+    font-style: italic;
+    color: #999;
+  }
+
+  &-stat__item {
+    display: inline-block;
+    vertical-align: top;
+    margin-right: 10px;
+
+    i {
+      color: #95e1d3;
+    }
+  }
+}
+
+@media (max-width: 770px) {
+  .section {
+    padding: 40px 0;
+  }
+
+  .team__wrapper {
+    margin-top: 50px;
+    justify-content: center;
+  }
+
+  .team__item {
+    width: 100%;
+    max-width: 410px;
+    margin-bottom: 30px;
+  }
+
+  .team__item:last-child {
+    margin-bottom: 0;
+  }
+
+  .wedo__img {
+    display: none;
+  }
+
+  .wedo__item {
+    width: 100%;
+  }
+
+  .blog {
+    max-width: 380px;
+    margin: 0 auto;
+  }
+
+  .blog__item {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .blog__item:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .section__header {
+    margin-bottom: 50px;
+  }
+
+  .section__suptitle {
+    font-size: 20px;
+  }
+
+  .section__title {
+    font-size: 24px;
+  }
+
+  .section__title:after {
+    margin: 20px auto;
+  }
+
+  .blogs__img {
+    width: 80px;
+    height: 50px;
+  }
+
+  .blogs__title {
+    font-size: 10px;
+  }
+}
